# html-parse

./: .gitignore  .travis.yml  Benchmark.hs  LICENSE  Microbench.hs  README.mkd  changelog.md  gen_entities.py  html-parse.cabal
.github/workflows/: haskell-ci.yml
Text/HTML/: Parser.hs  Tree.hs
app/: Main.hs
src/Data/: Trie.hs
src/Text/HTML/: Parser.hs  Tree.hs
src/Text/HTML/Parser/: Entities.hs
tests/Text/HTML/: ParserSpec.hs  TreeSpec.hs
