name:                html-parse
version:             0.2.0.0
synopsis:            A high-performance HTML tokenizer
description:
    This package provides a fast and reasonably robust HTML5 tokenizer built
    upon the @attoparsec@ library. The parsing strategy is based upon the HTML5
    parsing specification with few deviations.
    .
    The package targets similar use-cases to the venerable @tagsoup@ library,
    but is significantly more efficient, achieving parsing speeds of over 50
    megabytes per second on modern hardware with and typical web documents.
homepage:            http://github.com/bgamari/html-parse
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
category:            Text
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/bgamari/html-parse

library
  exposed-modules:     Text.HTML.Parser
  other-extensions:    OverloadedStrings, DeriveGeneric
  build-depends:       base >=4.8 && <4.10,
                       deepseq >=1.4 && <1.5,
                       attoparsec >=0.13 && <0.14,
                       text >=1.2 && <1.3
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             Benchmark.hs
  other-extensions:    OverloadedStrings, DeriveGeneric
  build-depends:       base,
                       deepseq,
                       attoparsec,
                       text,
                       tagsoup >= 0.13,
                       criterion >= 1.1
  default-language:    Haskell2010